# Synchro_jump

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: run_avatar_gui.py
scripts/: run_checks.sh
src/synchro_jump/: __init__.py  __main__.py
src/synchro_jump/avatar_viewer/: __init__.py  glb_inspector.py  mapping.py  math3d.py  retargeting.py  rigged_avatar.py  synthetic_motion.py  viewer_3d.py
src/synchro_jump/gui/: __init__.py  app.py  raster_avatar.py
src/synchro_jump/modeling/: __init__.py  athlete.py  biobuddy_model.py
src/synchro_jump/optimization/: __init__.py  bioptim_ocp.py  contact.py  estimator.py  explicit_platform.py  force_profile.py  initial_guess.py  problem.py  runtime_solution.py  runtime_summary.py  solution_cache.py  surrogate.py
tests/: test_athlete.py  test_avatar_example.py  test_avatar_glb_inspector.py  test_avatar_retargeting.py  test_biobuddy_model.py  test_bioptim_ocp.py  test_contact.py  test_estimator.py  test_explicit_platform.py  test_force_profile.py  test_gui_contract.py  test_gui_smoke.py  test_initial_guess.py  test_problem.py  test_raster_avatar.py  test_runtime_solution.py  test_runtime_summary.py  test_solution_cache.py  test_surrogate.py
