[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "synchro-jump"
version = "0.1.0"
description = "Vertical planar jump OCP with a moving platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "mickaelbegon" },
]
dependencies = []

[project.optional-dependencies]
gui = [
    "matplotlib>=3.8",
    "numpy>=1.25",
    "Pillow>=10.0",
]
avatar3d = [
    "numpy>=1.25",
    "PySide6>=6.7",
    "panda3d>=1.10.15",
    "panda3d-gltf>=1.2.1",
]
opt = [
    "numpy>=1.25",
    "casadi>=3.6",
    "biobuddy",
]
test = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
]

[project.scripts]
synchro-jump = "synchro_jump.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
